--- a/package.json
+++ b/package.json
@@ -6,19 +6,29 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "storybook": "start-storybook -p 6006",
+    "build-storybook": "build-storybook"
   },
   "dependencies": {
+    "autoprefixer": "^10.4.8",
     "next": "12.2.5",
+    "postcss": "^8.4.16",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-feather": "^2.0.10",
+    "react-icons": "^4.4.0",
+    "tailwindcss": "^3.1.8"
   },
   "devDependencies": {
+    "@babel/core": "^7.18.10",
     "@types/node": "18.7.5",
     "@types/react": "18.0.17",
     "@types/react-dom": "18.0.6",
+    "babel-loader": "^8.2.5",
     "eslint": "8.22.0",
     "eslint-config-next": "12.2.5",
+    "eslint-plugin-storybook": "^0.6.4",
     "typescript": "4.7.4"
   }
 }
